tests/snapshots/wit_snapshots__empty_module.snap
---
source: tests/wit_snapshots.rs
expression: wit
---
package formawasm:generated;

world component {
}
