tests/snapshots/wit_snapshots__fibonacci_function.snap
---
source: tests/wit_snapshots.rs
expression: wit
---
package formawasm:generated;

world component {
  export fib: func(n: s32) -> s32;
}
