tests/snapshots/wit_snapshots__record_with_two_fields.snap
---
source: tests/wit_snapshots.rs
expression: wit
---
package formawasm:generated;

interface types {
  record point {
    x: s32,
    y: s32,
  }
}

world component {
  use types.{point};
}
