tests/snapshots/wit_snapshots__variant_with_tuple_arms.snap
---
source: tests/wit_snapshots.rs
expression: wit
---
package formawasm:generated;

interface types {
  variant action {
    reset,
    add(s32),
    replace(tuple<s32, s32>),
  }
}

world component {
  use types.{action};
}
